--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -47,8 +47,6 @@
 
 html,
 body {
-	display: flex;
-	flex-direction: column;
 	min-height: 100vh;
 
 	font-family: 'DM Sans', sans-serif;
@@ -59,6 +57,15 @@ body {
 	color: var(--text-color);
 }
 
+#root {
+	min-height: 100vh;
+}
+
+.App {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
 /* General */
 
 .container {
